--- a/Landing/style.css
+++ b/Landing/style.css
@@ -261,11 +261,10 @@ p {
     cursor: pointer;
     text-align: center;
 }
-.slider__item-desc--spo::before {
+.slider__item-desc--spo {
     position: absolute;
     top: -45px;
     left: -57px;
-    content: "25%";
     width: 109px;
     height: 109px;
     background-image: url(img/spo_icon.png);
@@ -968,7 +967,7 @@ p {
 }
 .types__desc-title {
     font-family: "Rubik", "Arial", sans-serif;
-    font-size: 36px;
+    font-size: 35px;
     text-transform: uppercase;
     color: #c1cf2f;
     letter-spacing: 1.4px;
@@ -1357,9 +1356,36 @@ p {
     animation: smooth  0.5s 1 linear;
 }
 .quality__popup--1 {
-    background-image: url("img/quality1.png");
-    background-size: 125%;
+    background-image: url(img/pluses/bel-production.png);
+    background-position: 0px;
 }
+
+.quality__popup--2 {
+    background-image: url(img/pluses/filling-HR.png);
+    background-position: 0px;
+}
+
+.quality__popup--3 {
+    background-image: url(img/pluses/sizes.png);
+    background-position: 0px;
+}
+
+.quality__popup--4 {
+    background-image: url(img/pluses/spring-block.png);
+    background-position: 0px;
+}
+
+.quality__popup--5 {
+    background-image: url(img/pluses/trim.png);
+    background-position: 0px;
+}
+
+.quality__popup--6 {
+    background-image: url(img/pluses/wood.png);
+    background-position: 0px;
+}
+
+
 .quality__popup--active {
     display: block;
 }
